# axum-kickoff

./: .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Toasty.toml  deny.toml  justfile  package-lock.json  package.json  prek.toml
.github/workflows/: ci.yml
docs/: ADD_HTMX_FORM.md  ADD_NEW_MODEL.md  ADD_NEW_PAGE.md  ADD_PROTECTED_ROUTE.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  CSRF_PROTECTION.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  GETTING_STARTED.md  HOW_TO_GUIDES.md  HTMX_ASKAMA_PATTERNS.md  MIDDLEWARE.md  PRODUCTION_CHECKLIST.md  RATE_LIMITING.md  ROADMAP.md  STORAGE.md  TESTING.md  api-token-scopes.md  quickwit-integration.md  rate-limiting-redis-upgrade.md
src/: app.rs  config.rs  db.rs  lib.rs  metrics.rs  middleware.rs  rate_limiter.rs  router.rs  storage.rs
src/config/: base.rs  database.rs  mod.rs  server.rs
src/controllers/: auth.rs  examples.rs  mod.rs  post.rs  token.rs
src/middleware/: api_token.rs  auth.rs  block_traffic.rs  csrf.rs  error_handler.rs  metrics.rs  mod.rs  real_ip.rs  require_user_agent.rs  security_headers.rs  session.rs
src/models/: mod.rs  oauth_github.rs  post.rs  token.rs  user.rs
src/tests/: .auth.rs.pending-snap  auth.rs  builders.rs  error_responses.rs  integration_test.rs  middleware.rs  middleware_auth.rs  mod.rs  request_helper.rs  response.rs  test_app.rs
src/util/: auth.rs  errors.rs  gh_token_encryption.rs  mod.rs  oauth.rs  response.rs  token.rs
static/css/: style.css
templates/: index.html  server_time.html
templates/examples/: contact.html  contact_errors.html  contact_success.html  counter.html  counter_partial.html
