[package]
name = "axum-kickoff"
authors = ["Luiz Otavio V. B. Oliveira <luiz.vbo@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luizvbo/axum-kickoff"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
tikv-jemallocator = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "compression-gzip",
  "timeout",
  "catch-panic",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
cookie = "0.18"
derive_more = { version = "2", features = ["deref"] }
dotenvy = "0.15"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
time = "=0.3.36"
http = "1"
