[package]
name = "axum-kickoff"
authors = ["Luiz Otavio V. B. Oliveira <luiz.vbo@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/luizvbo/axum-kickoff"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
derive_more = { version = "2", features = ["deref"] }
dotenvy = "0.15"
http = "1"
num_cpus = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tikv-jemallocator = "0.7"
time = "=0.3.36"
jiff = "0.2"
toasty = { version = "0.7", features = ["sqlite", "jiff"] }
toasty-cli = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "compression-gzip",
  "timeout",
  "catch-panic",
  "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.15"
